# Ether

./: .gitignore  .pre-commit-config.yaml  ANYTHINGLLM_DETAILED_ANALYSIS.txt  ANYTHINGLLM_INTEGRATION_GUIDE.txt  ANYTHINGLLM_INTEGRATION_PLAN.md  ARCHITECTURE_ANALYSIS.md  AUTONOMY_STEP_PLAN.md  BENCHMARK_IMPROVEMENTS.md  BRAIN_CONSOLIDATION_COMPLETE.md  BRAIN_EXPANSION_GUIDE.md  CHANGELOG.md  CHANGELOG_v1.4.md  CLEANUP_SUMMARY.md  COMPOSER_ARCHITECTURE.md  CONSOLIDATION_PHASE1_COMPLETE.md  CONTRIBUTING.md  DAEMON_UNIFICATION_GUIDE.md  ETHER_BRAIN_EXPANSION.md  ETHER_CORE_MCP.md  ETHER_LOCAL_FIX_SUMMARY.md  ETHER_LOCAL_UPGRADE_SUMMARY.md  ETHER_LOCAL_V1.2_OPTIMIZATION_SUMMARY.md  ETHER_MIGRATION_GAP_ANALYSIS.md  KNOWLEDGE_EXPANSION_SUMMARY.md  MODULE_INTEGRATION_COMPLETE.md  NEXT_GEN_MODULES.md  PHASE10_5_FINAL_POLISH.md  PHASE10_5_NEURO_SYNAPTIC_COMPLETE.md  PHASE10_GREAT_UNIFICATION.md  PHASE11_3_NEURO_DENSE_COMPLETE.md  PHASE11_5_INTEGRATION_COMPLETE.md  PHASE11_5_KNOWLEDGE_PIPELINE_STATUS.md  PHASE11_6_ALIAS_LAYER_COMPLETE.md  PHASE11_LATENT_POTENTIAL_ANALYSIS.md  PHASE2_DEPENDENCY_MANAGEMENT.md  PHASE6_7_SECURITY_REPORT.md  PHASE6_MEMORY_SCALABILITY.md  PHASE8_9_COMPLETION_REPORT.md  README.md  README_CLI.md  (+22 more)
core/: __init__.py  adaptive_memory.py  autonomy.py  benchmark_enhancer.py  builder.py  builder_integration_example.py  cascade_scanner.py  code_fixer.py  compressed_search.py  context_manager.py  cortex.py  dependency_graph.py  ether_engine.py  feedback_commands.py  feedback_trainer.py  file_writer.py  gdscript_ast.py  godot_expert.py  godot_explainer.py  state.py  (+19 more)
(+254 files in other folders)
