[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ether-ai"
version = "1.9.8"
description = "A local-first, Godot-specific AI assistant with self-improving memory."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Ether Team" }
]
license = { text = "MIT" }
dependencies = [
    "streamlit>=1.28.0",
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "tqdm>=4.66.0",
    "watchdog>=3.0.0",
    "aiohttp>=3.9.0",
    "zstandard>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.9.0",
    "ruff>=0.0.290",
    "mypy>=1.5.0",
    "isort>=5.12.0",
    "pre-commit>=3.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
markers = [
    "asyncio: mark async tests that require pytest-asyncio",
]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
ignore_missing_imports = true

[tool.isort]
profile = "black"
